k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testforge
  labels:
    name: testforge
    environment: development
